<resources>
    <string name="app_name">Plant Management</string>
    <string name="nav_home">Home</string>
    <string name="nav_garden">Garden</string>
    <string name="nav_settings">Settings</string>
    <string name="fragment_garden">Your garden</string>
    <string name="edit_name">Plant name</string>
    <string name="edit_type">Type</string>
    <string name="save_button">Save</string>
    <string name="desc">Desc</string>
    <string name="title">Title</string>
    <string name="plant_type">Type :</string>
    <string name="plant_water">Watering:</string>
    <string name="plant_warnings"> Notes:</string>
    <string name="load_button"> Load Photo</string>
    <string name="edit_button"> Edit</string>
    <string name="delete_button"> Delete </string>


</resources>